@@ -10,8 +10,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -24,19 +22,19 @@ class ValidatorTest {
     class parseLineTests {
         static Stream<Arguments> dataFor_Should_ReturnCorrectArrayList_When_CorrectInput() {
             return Stream.of(
-                    Arguments.of("4 * 0+3", new ArrayList<>(Arrays.asList("4", "*", "0", "+", "3"))),
-                    Arguments.of("2/4-1", new ArrayList<>(Arrays.asList("2", "/", "4", "-", "1"))),
-                    Arguments.of("50/0.1", new ArrayList<>(Arrays.asList("50", "/", "0.1"))),
-                    Arguments.of("4", new ArrayList<>(List.of("4"))));
+                    Arguments.of("4 * 0+3", List.of("4", "*", "0", "+", "3")),
+                    Arguments.of("2/4-1", List.of("2", "/", "4", "-", "1")),
+                    Arguments.of("50/0.1", List.of("50", "/", "0.1")),
+                    Arguments.of("4", List.of("4")));
         }
 
         @ParameterizedTest
         @MethodSource({"dataFor_Should_ReturnCorrectArrayList_When_CorrectInput"})
-        void should_ReturnCorrectArrayList_When_CorrectInput(String line, ArrayList<String> excepted) throws Exception {
+        void should_ReturnCorrectArrayList_When_CorrectInput(String line, List<String> excepted) throws Exception {
             //Given
 
             //When
-            ArrayList<String> actual = validator.parseLine(line);
+            List<String> actual = validator.parseLine(line);
 
             //Then
             assertEquals(actual, excepted);
